more changes to personal portfolio, I'm not close yet and I AM STRESSED

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
-root{
+:root{
     --color-1: #61E786;
     --color-2: #A69888;
     --color-3: #4F518C;
     --color-4: #2C2A4A;
     --color-5: #7FDEFF;
+}
+body{
+    background-color: var(--color-1);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
 }
