Changes to all pages, added navigation links and beginning of dropwdown menu

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,12 @@
     --color-5: #7FDEFF;
 }
 body{
-    background-color: var(--color-1);
+    background-color: var(--color-4);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+}
+.dropdown-nav{
+    font-style: italic;
+    color: var(--color-1);
     
 }
