--- a/css/layout.css
+++ b/css/layout.css
@@ -12,6 +12,11 @@ h1{
     justify-content: center;
     padding: 2rem;
 }
+h3{
+    display: grid;
+    justify-content: left;
+    padding: 4rem;
+}
 
 img{
     display: grid;
